update for checkstyle.
Conflicts:

	src/main/java/jp/cafebabe/e3/exec/EntropyCounter.java
	src/main/java/jp/cafebabe/e3/exec/EntropyCounterManager.java